--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -406,6 +406,7 @@ body {
         color: black;
         display: flex;
         flex-direction: column;
+
         @include responsive-desktop {
           flex-direction: column;
           width: 1088px;
@@ -414,6 +415,11 @@ body {
         }
         &__name {
           position: relative;
+          margin-left: -30px;
+          @include responsive-desktop {
+            margin-left: 0px;
+          }
+
           h5 {
             text-transform: uppercase;
             font-size: 30px;
@@ -421,6 +427,7 @@ body {
             z-index: 1;
             margin-bottom: 20px;
             font-family: $font-family-title;
+
             @include responsive-desktop {
               margin-top: 39px;
               margin-bottom: 62px;
@@ -482,6 +489,11 @@ body {
         font-weight: $font-weight-title;
         margin-left: 30px;
         margin-bottom: 15px;
+        @include responsive-tablet {
+          align-self: normal;
+          text-align: center;
+          margin-left: -120px;
+        }
         @include responsive-desktop {
           font-size: 60px;
           align-self: normal;
