--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -1668,3 +1668,12 @@ body {
     }
   }
 }
+#new__invoices {
+  display: none;
+}
+#new__company {
+  display: none;
+}
+#new__contact {
+  display: none;
+}
