--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -147,7 +147,7 @@ table {
   font-family: "Inter", sans-serif;
   color: rgba(0, 0, 0, 0.4);
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   .public_footer {
     justify-content: space-around;
     padding: 100px 60px;
@@ -181,7 +181,7 @@ table {
   padding: 40px 0px;
   gap: 60px;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   .public_footer_section {
     flex-direction: row;
   }
@@ -301,7 +301,7 @@ body .public__header nav {
   margin-top: 35px;
   font-family: "Roboto", serif;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body .public__header nav {
     margin-bottom: 20px;
   }
@@ -327,7 +327,7 @@ body .public__header nav .nav__bar {
 body .public__header nav .nav__bar li {
   margin-right: 10px;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body .public__header nav .nav__bar li {
     margin-right: 20px;
   }
@@ -411,7 +411,7 @@ body .public__header nav h1 {
   font-size: 48px;
   font-weight: 900;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body .public__header nav h1 {
     margin-bottom: 20px;
   }
@@ -440,7 +440,7 @@ body .public__header .container__info h2 {
   font-weight: 900;
   text-align: center;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body .public__header .container__info h2 {
     width: auto;
     font-size: 50px;
@@ -459,7 +459,7 @@ body .public__header .container__info .container__info__img {
   height: 290px;
   width: 100vw;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body .public__header .container__info .container__info__img {
     height: 500px;
     width: 550px;
@@ -476,7 +476,7 @@ body .public__header img {
   height: 33px;
   margin-top: auto;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body .public__header img {
     height: 66px;
     width: 751px;
@@ -524,7 +524,7 @@ body main .container__info__slogan h2 {
   text-align: left;
   font-family: "Inter", sans-serif;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body main .container__info__slogan h2 {
     width: auto;
     font-size: 50px;
@@ -544,7 +544,7 @@ body main .container__info__slogan__phone__square {
   width: 350px;
   margin-top: 10px;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body main .container__info__slogan__phone__square {
     height: 345px;
     width: 648px;
@@ -571,12 +571,6 @@ body main .container__company__info {
 }
 body main .container__company__info__name {
   position: relative;
-  margin-left: -30px;
-}
-@media screen and (min-width: 1224px) {
-  body main .container__company__info__name {
-    margin-left: 0px;
-  }
 }
 body main .container__company__info__name h5 {
   text-transform: uppercase;
@@ -646,13 +640,6 @@ body main .container__people h5 {
   font-weight: 900;
   margin-left: 30px;
   margin-bottom: 15px;
-}
-@media screen and (min-width: 376px) and (max-width: 1223px) {
-  body main .container__people h5 {
-    align-self: normal;
-    text-align: center;
-    margin-left: -120px;
-  }
 }
 @media screen and (min-width: 1224px) {
   body main .container__people h5 {
@@ -975,7 +962,7 @@ body main .container__info__slogan h2 {
   text-align: left;
   font-family: "Inter", sans-serif;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body main .container__info__slogan h2 {
     width: auto;
     font-size: 50px;
@@ -995,7 +982,7 @@ body main .container__info__slogan__phone__square {
   width: 350px;
   margin-top: 10px;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body main .container__info__slogan__phone__square {
     height: 345px;
     width: 648px;
@@ -1169,7 +1156,7 @@ body main #myTable_paginate a:hover {
   padding: 18px 12px;
   color: rgba(138, 140, 145, 0.6274509804);
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   .login__section__card__form {
     align-items: flex-start;
     margin: 20px auto;
@@ -1192,7 +1179,7 @@ body main #myTable_paginate a:hover {
   padding: 10px 0px;
   outline: 5px solid rgba(125, 151, 244, 0.4784313725);
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   .login__section__card__form h2 {
     width: auto;
     margin: 20px auto;
@@ -1251,7 +1238,7 @@ body main #myTable_paginate a:hover {
   border-radius: 5px;
   margin: 0px auto 0px;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   .login__section__card__form div input[type=submit] {
     margin: 5px auto 0px;
   }
@@ -1318,7 +1305,7 @@ body main #myTable_paginate a:hover {
   color: rgba(138, 140, 145, 0.6274509804);
   font-family: "Roboto", serif;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   .signup__section__card__form {
     align-items: flex-start;
     margin: 20px auto;
@@ -1340,7 +1327,7 @@ body main #myTable_paginate a:hover {
   padding: 10px 0px;
   outline: 5px solid rgba(125, 151, 244, 0.4784313725);
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   .signup__section__card__form h2 {
     width: auto;
     margin: 20px auto;
@@ -1393,7 +1380,7 @@ body main #myTable_paginate a:hover {
   border-radius: 5px;
   margin: 20px auto 0px;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   .signup__section__card__form input[type=submit] {
     margin: 25px auto 0px;
   }
@@ -1431,7 +1418,7 @@ body main #myTable_paginate a:hover {
   background-position: center;
   border-radius: 10px 10px 0px 0px;
 }
-@media screen and (min-width: 376px) and (max-width: 1223px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   .signup__section__card__image {
     min-height: 500px;
   }
@@ -1482,7 +1469,6 @@ body main #myTable_paginate a:hover {
   .dashboard .nav__container .side__navbar {
     width: 285px;
     justify-content: initial;
-    position: fixed;
     left: 0px;
     height: 100vh;
   }
@@ -1531,13 +1517,6 @@ body main #myTable_paginate a:hover {
 }
 .dashboard .nav__container .side__navbar ul li img {
   margin-right: 6px;
-}
-@media screen and (min-width: 1224px) {
-  .dashboard .nav__container .side__navbar .user__footer {
-    position: fixed;
-    left: 201px;
-    bottom: 22px;
-  }
 }
 .dashboard .nav__container .side__navbar .user__footer svg {
   display: none;
@@ -1610,7 +1589,6 @@ body main #myTable_paginate a:hover {
 @media screen and (min-width: 1224px) {
   .dashboard .dashboard__header .title {
     text-align: initial;
-    padding-top: 54px;
   }
 }
 .dashboard .dashboard__header .title h2 {
@@ -1651,7 +1629,7 @@ body main #myTable_paginate a:hover {
 @media screen and (min-width: 1224px) {
   .dashboard .dashboard__header .title__description {
     text-align: initial;
-    margin-left: initial;
+    margin: none;
     width: 1044px;
     height: 206px;
     flex-shrink: 0;
@@ -1679,47 +1657,14 @@ body main #myTable_paginate a:hover {
   padding-top: 4px;
   color: #fff;
 }
-@media screen and (min-width: 1224px) {
-  .dashboard .dashboard__header .title__description p {
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: normal;
-    padding-left: 82px;
-    padding-top: 6px;
-  }
-}
-@media screen and (min-width: 1224px) {
-  .dashboard .dashboard__header .svg__container {
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    right: 140px;
-  }
-}
-.dashboard .dashboard__header .svg__container .svg {
+.dashboard .dashboard__header .svg {
   width: 260px;
   height: auto;
-}
-@media screen and (min-width: 1224px) {
-  .dashboard .dashboard__header .svg__container .svg {
-    display: flex;
-    width: initial;
-    height: initial;
-  }
 }
 .dashboard .main__dashboard {
   font-family: "Inter", sans-serif;
   padding-top: 15px;
   display: flex;
-}
-@media screen and (min-width: 1224px) {
-  .dashboard .main__dashboard {
-    width: 1044px;
-    position: absolute;
-    left: 337px;
-    top: 440px;
-  }
 }
 .dashboard .main__dashboard .container__main {
   display: flex;
@@ -1727,25 +1672,11 @@ body main #myTable_paginate a:hover {
   flex-direction: column;
   padding: 60px 26px;
 }
-@media screen and (min-width: 1224px) {
-  .dashboard .main__dashboard .container__main {
-    gap: initial;
-    display: grid;
-    grid-template-columns: 505px 505px;
-    grid-template-areas: "statistics invoice" "contacts companies";
-  }
-}
 .dashboard .main__dashboard .container__main section {
   background-color: #ffffff;
   border-radius: 10px;
   min-height: 100px;
   padding: 10px 15px;
-}
-@media screen and (min-width: 1224px) {
-  .dashboard .main__dashboard .container__main section {
-    margin-right: 35px;
-    margin-bottom: 30px;
-  }
 }
 .dashboard .main__dashboard .container__main section h3 {
   font-weight: 700;
@@ -1756,12 +1687,6 @@ body main #myTable_paginate a:hover {
 }
 .dashboard .main__dashboard .container__main .statistics {
   padding: 4px 24px;
-}
-@media screen and (min-width: 1224px) {
-  .dashboard .main__dashboard .container__main .statistics {
-    grid-area: statistics;
-    height: 200px;
-  }
 }
 .dashboard .main__dashboard .container__main .statistics h3 {
   margin-bottom: 7px;
@@ -1792,34 +1717,15 @@ body main #myTable_paginate a:hover {
 .dashboard .main__dashboard .container__main .statistics .number__companies {
   background-color: #ff808b;
 }
-@media screen and (min-width: 1224px) {
-  .dashboard .main__dashboard .container__main .contacts {
-    z-index: 1;
-    position: absolute;
-    width: 440px;
-    bottom: 237px;
-    min-height: 400px;
-    grid-area: contacts;
-  }
-}
-@media screen and (min-width: 1224px) {
-  .dashboard .main__dashboard .container__main .invoice {
-    min-height: 400px;
-    grid-area: invoice;
-  }
-}
-@media screen and (min-width: 1224px) {
-  .dashboard .main__dashboard .container__main .companies {
-    min-height: 400px;
-    grid-area: companies;
-  }
-}
-.dashboard #new__invoices {
+
+#new__invoices {
   display: none;
 }
-.dashboard #new__company {
+
+#new__company {
   display: none;
 }
-.dashboard #new__contact {
+
+#new__contact {
   display: none;
-}/*# sourceMappingURL=main.css.map */
+}
