--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -406,7 +406,6 @@ body {
         color: black;
         display: flex;
         flex-direction: column;
-
         @include responsive-desktop {
           flex-direction: column;
           width: 1088px;
@@ -415,11 +414,6 @@ body {
         }
         &__name {
           position: relative;
-          margin-left: -30px;
-          @include responsive-desktop {
-            margin-left: 0px;
-          }
-
           h5 {
             text-transform: uppercase;
             font-size: 30px;
@@ -427,7 +421,6 @@ body {
             z-index: 1;
             margin-bottom: 20px;
             font-family: $font-family-title;
-
             @include responsive-desktop {
               margin-top: 39px;
               margin-bottom: 62px;
@@ -489,11 +482,6 @@ body {
         font-weight: $font-weight-title;
         margin-left: 30px;
         margin-bottom: 15px;
-        @include responsive-tablet {
-          align-self: normal;
-          text-align: center;
-          margin-left: -120px;
-        }
         @include responsive-desktop {
           font-size: 60px;
           align-self: normal;
@@ -1374,7 +1362,6 @@ body {
     @include responsive-desktop {
       position: initial;
       z-index: initial;
-      // height: 100vh;
     }
     .side__navbar {
       display: flex;
@@ -1391,7 +1378,7 @@ body {
       @include responsive-desktop {
         width: 285px;
         justify-content: initial;
-        position: fixed;
+
         // display: flex;
         // justify-content: center;
         // align-items: center;
@@ -1447,11 +1434,6 @@ body {
         }
       }
       .user__footer {
-        @include responsive-desktop {
-          position: fixed;
-          left: 201px;
-          bottom: 22px;
-        }
         svg {
           display: none;
         }
@@ -1527,7 +1509,6 @@ body {
       @include responsive-desktop {
         text-align: initial;
         // padding-left: 337px;
-        padding-top: 54px;
       }
       h2 {
         font-size: 20px;
@@ -1563,7 +1544,7 @@ body {
       background: #9698d6;
       @include responsive-desktop {
         text-align: initial;
-        margin-left: initial;
+        margin: none;
         width: 1044px;
         height: 206px;
         flex-shrink: 0;
@@ -1589,38 +1570,28 @@ body {
         padding-top: 4px;
         color: #fff;
         @include responsive-desktop {
-          font-size: 15px;
-          font-style: normal;
-          font-weight: 300;
-          line-height: normal;
-          padding-left: 82px;
-          padding-top: 6px;
+          // font-size: 15px;
+          // font-style: normal;
+          // font-weight: 300;
+          // line-height: normal;
+          // padding-left: 82px;
+          // padding-top: 6px;
         }
       }
     }
-    .svg__container {
-      @include responsive-desktop {
-        z-index: 1;
-        position: absolute;
-        top: 0;
-        right: 140px;
-      }
-      .svg {
-        // flex-shrink: 1;
-        // object-position: left top;
-        width: 260px;
-        height: auto;
+    .svg {
+      // z-index: 1;
+      // display: flex;
+      // flex-shrink: 1;
+      // object-position: left top;
+      width: 260px;
+      height: auto;
 
-        @include responsive-desktop {
-          display: flex;
-          width: initial;
-          height: initial;
-          // top: 0;
-          // display: flex;
-          // justify-content: center;
-          // align-items: center;
-          // flex-shrink: 0;
-        }
+      @include responsive-desktop {
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
+        // flex-shrink: 0;
       }
     }
 
@@ -1632,34 +1603,16 @@ body {
     font-family: $font-family-title;
     padding-top: 15px;
     display: flex;
-    @include responsive-desktop {
-      width: 1044px;
-      position: absolute;
-      left: 337px;
-      top: 440px;
-    }
     .container__main {
       display: flex;
       gap: 29px;
       flex-direction: column;
       padding: 60px 26px;
-      @include responsive-desktop {
-        gap: initial;
-        display: grid;
-        grid-template-columns: 505px 505px;
-        grid-template-areas:
-          "statistics invoice"
-          "contacts companies";
-      }
       section {
         background-color: #ffffff;
         border-radius: 10px;
         min-height: 100px;
         padding: 10px 15px;
-        @include responsive-desktop {
-          margin-right: 35px;
-          margin-bottom: 30px;
-        }
         h3 {
           font-weight: $font-weight-title-dashboard;
         }
@@ -1670,12 +1623,6 @@ body {
       }
       .statistics {
         padding: 4px 24px;
-        @include responsive-desktop {
-          grid-area: statistics;
-          height: 200px;
-          // margin-right: 35px;
-          // margin-bottom: 30px;
-        }
         h3 {
           margin-bottom: 7px;
         }
@@ -1706,39 +1653,16 @@ body {
           background-color: #ff808b;
         }
       }
-      .contacts {
-        @include responsive-desktop {
-          z-index: 1;
-          position: absolute;
-          width: 440px;
-          bottom: 237px;
-          min-height: 400px;
-          grid-area: contacts;
-          // margin-right: 35px;
-        }
-      }
-      .invoice {
-        @include responsive-desktop {
-          min-height: 400px;
-          grid-area: invoice;
-          // margin-bottom: 30px;
-        }
-      }
-      .companies {
-        @include responsive-desktop {
-          min-height: 400px;
-          grid-area: companies;
-        }
-      }
     }
   }
-  #new__invoices {
-    display: none;
-  }
-  #new__company {
-    display: none;
-  }
-  #new__contact {
-    display: none;
-  }
+}
+
+#new__invoices {
+  display: none;
+}
+#new__company {
+  display: none;
+}
+#new__contact {
+  display: none;
 }
