--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -1405,6 +1405,15 @@ body {
         background: #e0e0e0;
         opacity: 0.5;
       }
+      // .user__hr {
+      //   position: fixed;
+      //   top: 285px;
+      // }
+      .footer_hr {
+        width: 285px;
+        position: fixed;
+        bottom: 24px;
+      }
       // padding-top: 60px;
       // transition: left 5 ease;
       .user__profile {
@@ -1412,26 +1421,36 @@ body {
         align-items: center;
         flex-direction: column;
         @include responsive-desktop {
+          justify-content: center;
+
           top: 32px;
+          height: 280px;
         }
         img {
           width: 60px;
           height: 60px;
           border-radius: 50%;
 
-          margin-bottom: 10px;
+          margin-bottom: 20px;
         }
         h2 {
           text-align: center;
           margin-bottom: 20px;
           font-size: 20px;
           font-weight: $font-weight-title;
+          @include responsive-desktop {
+            // text-align: justify;
+            width: 80px;
+          }
         }
       }
       ul {
         // height: ;
         margin-left: auto;
         margin-right: auto;
+        @include responsive-desktop {
+          padding-top: 55px;
+        }
         li {
           margin: 17px 0;
           display: flex;
@@ -1569,7 +1588,7 @@ body {
         flex-shrink: 0;
         // padding-left: 337px;
       }
-      h2 {
+      h1 {
         font-size: 25px;
         font-weight: $font-weight-title-dashboard;
         padding-top: 7px;
