--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -1516,6 +1516,11 @@ body main #myTable_paginate a:hover {
   background: #e0e0e0;
   opacity: 0.5;
 }
+.dashboard .nav__container .side__navbar .footer_hr {
+  width: 285px;
+  position: fixed;
+  bottom: 24px;
+}
 .dashboard .nav__container .side__navbar .user__profile {
   display: flex;
   align-items: center;
@@ -1523,14 +1528,16 @@ body main #myTable_paginate a:hover {
 }
 @media screen and (min-width: 1224px) {
   .dashboard .nav__container .side__navbar .user__profile {
+    justify-content: center;
     top: 32px;
+    height: 280px;
   }
 }
 .dashboard .nav__container .side__navbar .user__profile img {
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 .dashboard .nav__container .side__navbar .user__profile h2 {
   text-align: center;
@@ -1538,9 +1545,19 @@ body main #myTable_paginate a:hover {
   font-size: 20px;
   font-weight: 900;
 }
+@media screen and (min-width: 1224px) {
+  .dashboard .nav__container .side__navbar .user__profile h2 {
+    width: 80px;
+  }
+}
 .dashboard .nav__container .side__navbar ul {
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .nav__container .side__navbar ul {
+    padding-top: 55px;
+  }
 }
 .dashboard .nav__container .side__navbar ul li {
   margin: 17px 0;
@@ -1680,14 +1697,14 @@ body main #myTable_paginate a:hover {
     flex-shrink: 0;
   }
 }
-.dashboard .dashboard__header .title__description h2 {
+.dashboard .dashboard__header .title__description h1 {
   font-size: 25px;
   font-weight: 700;
   padding-top: 7px;
   color: #fff;
 }
 @media screen and (min-width: 1224px) {
-  .dashboard .dashboard__header .title__description h2 {
+  .dashboard .dashboard__header .title__description h1 {
     font-size: 35px;
     font-style: normal;
     font-weight: 700;
@@ -1717,7 +1734,7 @@ body main #myTable_paginate a:hover {
     z-index: 1;
     position: absolute;
     top: 0;
-    right: 140px;
+    left: 885px;
   }
 }
 .dashboard .dashboard__header .svg__container .svg {
@@ -1842,6 +1859,11 @@ body main #myTable_paginate a:hover {
   display: flex;
   flex-direction: column;
 }
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic {
+    width: 1044px;
+  }
+}
 .dashboard .main__dashboard .container__dynamic__dashboard {
   width: 340px;
   background-color: white;
@@ -1853,6 +1875,7 @@ body main #myTable_paginate a:hover {
 @media screen and (min-width: 1224px) {
   .dashboard .main__dashboard .container__dynamic__dashboard {
     width: 1044px;
+    margin-left: 0px;
   }
 }
 .dashboard .main__dashboard .container__dynamic__dashboard h4 {
@@ -1909,6 +1932,7 @@ body main #myTable_paginate a:hover {
 @media screen and (min-width: 1224px) {
   .dashboard .main__dashboard .container__dynamic__dashboard__invoices__new {
     width: 1044px;
+    margin-left: 0px;
   }
 }
 .dashboard .main__dashboard .container__dynamic__dashboard__invoices__new h4 {
