--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -1422,6 +1422,15 @@ body {
         background: #e0e0e0;
         opacity: 0.5;
       }
+      // .user__hr {
+      //   position: fixed;
+      //   top: 285px;
+      // }
+      .footer_hr {
+        width: 285px;
+        position: fixed;
+        bottom: 24px;
+      }
       // padding-top: 60px;
       // transition: left 5 ease;
       .user__profile {
@@ -1429,26 +1438,36 @@ body {
         align-items: center;
         flex-direction: column;
         @include responsive-desktop {
+          justify-content: center;
+
           top: 32px;
+          height: 280px;
         }
         img {
           width: 60px;
           height: 60px;
           border-radius: 50%;
 
-          margin-bottom: 10px;
+          margin-bottom: 20px;
         }
         h2 {
           text-align: center;
           margin-bottom: 20px;
           font-size: 20px;
           font-weight: $font-weight-title;
+          @include responsive-desktop {
+            // text-align: justify;
+            width: 80px;
+          }
         }
       }
       ul {
         // height: ;
         margin-left: auto;
         margin-right: auto;
+        @include responsive-desktop {
+          padding-top: 55px;
+        }
         li {
           margin: 17px 0;
           display: flex;
@@ -1586,7 +1605,7 @@ body {
         flex-shrink: 0;
         // padding-left: 337px;
       }
-      h2 {
+      h1 {
         font-size: 25px;
         font-weight: $font-weight-title-dashboard;
         padding-top: 7px;
@@ -1620,7 +1639,7 @@ body {
         z-index: 1;
         position: absolute;
         top: 0;
-        right: 140px;
+        left: 885px;
       }
       .svg {
         // flex-shrink: 1;
@@ -1748,12 +1767,14 @@ body {
         }
       }
     }
-
     .container__dynamic {
       width: 375px;
       display: flex;
       flex-direction: column;
       // align-items: center;
+      @include responsive-desktop {
+        width: 1044px;
+      }
       &__dashboard {
         width: 340px;
         background-color: white;
@@ -1763,6 +1784,7 @@ body {
         margin-bottom: 30px;
         @include responsive-desktop {
           width: 1044px;
+          margin-left: 0px;
         }
         h4 {
           font-family: $font-family-title;
@@ -1814,6 +1836,7 @@ body {
           box-shadow: 0px 0px 37px -21px #00000040;
           @include responsive-desktop {
             width: 1044px;
+            margin-left: 0px;
           }
           h4 {
             font-family: $font-family-title;
@@ -1887,6 +1910,7 @@ body {
     display: none;
   }
 }
+
 .error {
   min-height: 100vh;
   width: 100%;
