--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -1661,7 +1661,7 @@ body main #myTable_paginate a:hover {
   margin-right: auto;
   text-align: center;
   width: 320px;
-  height: 80px;
+  min-height: 80px;
   border-radius: 10px;
   background: #9698d6;
 }
@@ -1846,7 +1846,7 @@ body main #myTable_paginate a:hover {
   background-color: white;
   border-radius: 10px;
   box-shadow: 0px 0px 37px -21px rgba(0, 0, 0, 0.2509803922);
-  margin-left: 35px;
+  margin-left: 17px;
   margin-bottom: 30px;
 }
 @media screen and (min-width: 1224px) {
@@ -1889,6 +1889,7 @@ body main #myTable_paginate a:hover {
 }
 .dashboard .main__dashboard .container__dynamic__dashboard__modify .label_search {
   color: rgba(255, 255, 255, 0);
+  border-style: none;
 }
 .dashboard .main__dashboard .container__dynamic__dashboard__modify .label_search input {
   height: 35px;
@@ -1916,11 +1917,16 @@ body main #myTable_paginate a:hover {
   height: 30px;
   width: 30px;
 }
+.dashboard .main__dashboard .container__dynamic__dashboard__modify img:hover {
+  transform: scale(1.3);
+}
 .dashboard .main__dashboard .container__dynamic__dashboard__invoices__new {
   background-color: #ffffff;
   border-radius: 10px;
-  margin-left: 35px;
+  margin-left: 17px;
   box-shadow: 0px 0px 37px -21px rgba(0, 0, 0, 0.2509803922);
+  width: 340px;
+  margin-bottom: 20px;
 }
 @media screen and (min-width: 1224px) {
   .dashboard .main__dashboard .container__dynamic__dashboard__invoices__new {
