--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -1577,7 +1577,7 @@ body {
       margin-right: auto;
       text-align: center;
       width: 320px;
-      height: 80px;
+      min-height: 80px;
       border-radius: 10px;
       background: #9698d6;
       @include responsive-desktop {
@@ -1764,7 +1764,7 @@ body {
         background-color: white;
         border-radius: 10px;
         box-shadow: 0px 0px 37px -21px #00000040;
-        margin-left: 35px;
+        margin-left: 17px;
         margin-bottom: 30px;
         @include responsive-desktop {
           width: 1044px;
@@ -1798,6 +1798,7 @@ body {
           }
           .label_search {
             color: #ffffff00;
+            border-style: none;
             input {
               height: 35px;
               width: 200px;
@@ -1823,13 +1824,18 @@ body {
             height: 30px;
             width: 30px;
           }
+          img:hover {
+            transform: scale(1.3);
+          }
         }
 
         &__invoices__new {
           background-color: #ffffff;
           border-radius: 10px;
-          margin-left: 35px;
+          margin-left: 17px;
           box-shadow: 0px 0px 37px -21px #00000040;
+          width: 340px;
+          margin-bottom: 20px;
           @include responsive-desktop {
             width: 1044px;
             margin-left: 0px;
