--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -1716,7 +1716,7 @@ body main #myTable_paginate a:hover {
 @media screen and (min-width: 1224px) {
   .dashboard .dashboard__header .svg__container {
     z-index: 1;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 885px;
   }
