--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -1473,7 +1473,6 @@ body main #myTable_paginate a:hover {
   position: absolute;
   background-color: #f5f5fb;
   width: 250px;
-  height: 350.63px;
   z-index: 1;
   left: -250px;
   padding: 10px 0;
@@ -1782,6 +1781,9 @@ body main #myTable_paginate a:hover {
 }
 .dashboard .main__dashboard .container__main .statistics h3 {
   margin-bottom: 7px;
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
 }
 .dashboard .main__dashboard .container__main .statistics .number__container {
   display: flex;
@@ -1982,6 +1984,10 @@ body main #myTable_paginate a:hover {
   background-color: #9698d6;
   color: white;
 }
+.dashboard .main__dashboard .container__dynamic__dashboard__invoices__new form input:last-child:hover {
+  background-color: #56587e;
+  color: #fff;
+}
 @media screen and (min-width: 1224px) {
   .dashboard .main__dashboard .container__dynamic__dashboard__invoices__new form input {
     width: 978px;
@@ -2008,8 +2014,9 @@ body main #myTable_paginate a:hover {
 .dashboard .main__dashboard .container__dynamic__dashboard__company__new {
   background-color: #ffffff;
   border-radius: 10px;
-  margin-left: 35px;
+  margin-left: 17px;
   box-shadow: 0px 0px 37px -21px rgba(0, 0, 0, 0.2509803922);
+  width: 340px;
 }
 @media screen and (min-width: 1224px) {
   .dashboard .main__dashboard .container__dynamic__dashboard__company__new {
@@ -2065,6 +2072,10 @@ body main #myTable_paginate a:hover {
   background-color: #9698d6;
   color: white;
 }
+.dashboard .main__dashboard .container__dynamic__dashboard__company__new form input:last-child:hover {
+  background-color: #56587e;
+  color: #fff;
+}
 @media screen and (min-width: 1224px) {
   .dashboard .main__dashboard .container__dynamic__dashboard__company__new form input {
     width: 978px;
@@ -2091,8 +2102,9 @@ body main #myTable_paginate a:hover {
 .dashboard .main__dashboard .container__dynamic__dashboard__contact__new {
   background-color: #ffffff;
   border-radius: 10px;
-  margin-left: 35px;
+  margin-left: 17px;
   box-shadow: 0px 0px 37px -21px rgba(0, 0, 0, 0.2509803922);
+  width: 340px;
 }
 @media screen and (min-width: 1224px) {
   .dashboard .main__dashboard .container__dynamic__dashboard__contact__new {
@@ -2148,6 +2160,10 @@ body main #myTable_paginate a:hover {
   background-color: #9698d6;
   color: white;
 }
+.dashboard .main__dashboard .container__dynamic__dashboard__contact__new form input:last-child:hover {
+  background-color: #56587e;
+  color: #fff;
+}
 @media screen and (min-width: 1224px) {
   .dashboard .main__dashboard .container__dynamic__dashboard__contact__new form input {
     width: 978px;
@@ -2181,6 +2197,20 @@ body main #myTable_paginate a:hover {
   display: none;
 }
 
+.animation {
+  animation: myAnim 1s ease 0s 1 normal forwards;
+}
+
+@keyframes myAnim {
+  0% {
+    opacity: 0;
+    transform: translateY(250px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 .error {
   min-height: 100vh;
   width: 100%;
