--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -1384,7 +1384,7 @@ body {
       position: absolute;
       background-color: #f5f5fb;
       width: 250px;
-      height: 350.63px;
+
       z-index: 1;
       left: -250px;
       padding: 10px 0;
@@ -1697,6 +1697,9 @@ body {
         }
         h3 {
           margin-bottom: 7px;
+          font-family: $font-family-title;
+          font-size: 18px;
+          font-weight: 700;
         }
         .number__container {
           display: flex;
@@ -1880,6 +1883,10 @@ body {
               &:last-child {
                 background-color: #9698d6;
                 color: white;
+                &:hover {
+                  background-color: #56587e;
+                  color: #fff;
+                }
               }
               @include responsive-desktop {
                 width: 978px;
@@ -1907,8 +1914,9 @@ body {
         &__company__new {
           background-color: #ffffff;
           border-radius: 10px;
-          margin-left: 35px;
+          margin-left: 17px;
           box-shadow: 0px 0px 37px -21px #00000040;
+          width: 340px;
           @include responsive-desktop {
             width: 1044px;
             margin-left: 0px;
@@ -1953,6 +1961,10 @@ body {
               &:last-child {
                 background-color: #9698d6;
                 color: white;
+                &:hover {
+                  background-color: #56587e;
+                  color: #fff;
+                }
               }
               @include responsive-desktop {
                 width: 978px;
@@ -1980,8 +1992,9 @@ body {
         &__contact__new {
           background-color: #ffffff;
           border-radius: 10px;
-          margin-left: 35px;
+          margin-left: 17px;
           box-shadow: 0px 0px 37px -21px #00000040;
+          width: 340px;
           @include responsive-desktop {
             width: 1044px;
             margin-left: 0px;
@@ -2026,6 +2039,10 @@ body {
               &:last-child {
                 background-color: #9698d6;
                 color: white;
+                &:hover {
+                  background-color: #56587e;
+                  color: #fff;
+                }
               }
               @include responsive-desktop {
                 width: 978px;
@@ -2063,7 +2080,20 @@ body {
     display: none;
   }
 }
+.animation {
+  animation: myAnim 1s ease 0s 1 normal forwards;
+}
+@keyframes myAnim {
+  0% {
+    opacity: 0;
+    transform: translateY(250px);
+  }
 
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 .error {
   min-height: 100vh;
   width: 100%;
